--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TMDB MOVIE WITH OLD OF HOOK",
+  "name": "TMDB-HOOK-OLD",
   "version": "1.0.0",
   "main": "dist/index.html",
   "scripts": {
