--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "minimist": "1.2.3",
     "parcel-bundler": "^1.12.4",
     "react": "^16.6.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -32,5 +33,8 @@
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.1.1",
     "rimraf": "^2.6.2"
+  },
+  "alias": {
+    "template": "./scr/components/Pages/Template/index"
   }
 }
